--- a/force-app/main/default/classes/SummitEventsAppointmentTriggerHandler.cls
+++ b/force-app/main/default/classes/SummitEventsAppointmentTriggerHandler.cls
@@ -170,10 +170,10 @@ public with sharing class SummitEventsAppointmentTriggerHandler {
                             currentRegAppointment += '<b>' + apt.Appointment_Title__c.trim() + '</b><br/>';
                         }
                         if (String.isNotBlank(apt.Description__c)) {
-                            currentRegAppointment += seaShared.removeHTMLandEscape(apt.Description__c, false).trim() + '<br/>';
+                            currentRegAppointment += SummitEventsShared.removeHTMLandEscape(apt.Description__c, false).trim() + '<br/>';
                         }
                         if (String.isNotBlank(apt.Registrant_Input__c)) {
-                            currentRegAppointment += seaShared.removeHTMLandEscape(apt.Registrant_Input__c, false).trim() + '<br/>';
+                            currentRegAppointment += SummitEventsShared.removeHTMLandEscape(apt.Registrant_Input__c, false).trim() + '<br/>';
                         }
                         if (String.isNotBlank(currentRegAppointment)) {
                             requestedAppointments += currentRegAppointment + '<br/>';
