--- a/force-app/test/default/classes/SummitEventsAfterLeadConversion_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsAfterLeadConversion_TEST.cls
@@ -6,7 +6,7 @@ public class SummitEventsAfterLeadConversion_TEST {
         Summit_Events_Registration__c seaTestRegistration = SummitEventsTestSharedDataFactory.createEventRegistration(seaTestInstances[1], 'Test', 'Record', 'test@example.com', '55555', '1971-03-22', '2012', null);
         Summit_Events__c seaTestEvent = SummitEventsTestSharedDataFactory.getEventRecord(seaTestInstances[1].Event__c);
         seaTestEvent.Contact_Matching_No_Match_Behavior__c = null;
-        seaTestEvent.Lead_Matching_Rules__c = 'Use Salesforce Duplicate Rule';
+        seaTestEvent.Lead_matching_rules__c = 'Use Salesforce Duplicate Rule';
         seaTestEvent.Lead_Creation_Duplicate_Rule__c = 'Standard Lead Duplicate Rule';
         seaTestEvent.Lead_Matching_No_Match_Behavior__c = 'Create Lead';
         seaTestEvent.Lead_Matching_Multiple_Match_Behavior__c = 'Match with most recently modified';
@@ -19,8 +19,8 @@ public class SummitEventsAfterLeadConversion_TEST {
         
         Lead testLead = [SELECT Id FROM Lead];
         
-        Database.LeadConvert lc = new database.LeadConvert();
-        lc.setLeadId(testlead.id);
+        Database.LeadConvert lc = new Database.LeadConvert();
+        lc.setLeadId(testLead.Id);
         lc.setConvertedStatus('Closed - Converted');
         Database.LeadConvertResult lcr = Database.convertLead(lc);
     }
